<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_resource_interfaces</name>
  <version>14.3.3</version>
  <description>ROS interfaces for working with resources like meshes.</description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <author email="william@openrobotics.org">William Woodall</author>
  <author>Eloy Briceño</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
